# arbiter

./: .gitignore  2026-06-13-r07-phase1-arbiter-rerank-plan.md  2026-06-13-r07-thin-slice.md  20260714shadowroutingphase1plan (1).md  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SUGGESTIONS.md  TODO.md  arbiter-spec.md  pyproject.toml
.claude/skills/docs-audit/: SKILL.md
.claude/skills/spec-generator-skill/: SKILL.md
.github/workflows/: ci.yml
arbiter-cli/: Cargo.toml
arbiter-cli/benches/: routing.rs
arbiter-cli/src/: main.rs
arbiter-cli/tests/: catalog_cli.rs
arbiter-core/: Cargo.toml
arbiter-core/src/: authority.rs  error.rs  lib.rs  obs.rs  traits.rs  types.rs
arbiter-core/src/catalog/: mod.rs
arbiter-core/src/invariant/: mod.rs  rules.rs
arbiter-core/src/policy/: decision_tree.rs  engine.rs  mod.rs
arbiter-core/tests/: catalog_validation.rs  emit_contract.rs  fixtures_contract.rs  request_trace.rs
arbiter-core/tests/fixtures/catalog/: deprecated_ref.toml  dup_agent.toml  retired_ref.toml  routable_conflict.toml  unknown_enum.toml  unknown_harness.toml  unknown_model.toml
arbiter-mcp/: Cargo.toml
arbiter-mcp/src/: agents.rs  config.rs  db.rs  features.rs  lib.rs  main.rs  metrics.rs  server.rs  watcher.rs
arbiter-mcp/src/tools/: agent_status.rs  get_budget.rs  get_metrics.rs  mod.rs  report_benchmark.rs  report_outcome.rs  route_task.rs
arbiter-mcp/tests/: contract_test.rs  golden_tests.rs  integration.rs  promoted_contracts.rs  report_benchmark_test.rs
arbiter-mcp/tests/golden/: 01_initialize.jsonl  02_initialized.jsonl  03_tools_list.jsonl  04_ping.jsonl  05_route_task_valid.jsonl  06_route_task_missing_task_id.jsonl  07_route_task_missing_task.jsonl  08_report_outcome_valid.jsonl  09_report_outcome_invalid_status.jsonl  10_get_agent_status.jsonl  11_get_metrics.jsonl  12_unknown_method.jsonl
config/: agents.toml  authority.toml  authority.toml.example  claude_desktop_config.json  invariants.toml
contracts/authority/: rationale.md  schema.json
contracts/authority/fixtures/: allowed.json  denied.json
contracts/budget/: rationale.md  schema.json
contracts/budget/fixtures/: empty.json  over-budget.json
contracts/capability/: rationale.md  schema.json
contracts/capability/fixtures/: harness_model.json  legacy_bare.json
contracts/policy-decision-ref/: rationale.md  schema.json
contracts/policy-decision-ref/fixtures/: assign.json  reject.json
docs/: 2026-07-05-catalog-loader-design.md  2026-07-05-catalog-loader-plan.md  2026-07-05-routable-gate-design.md  2026-07-05-routable-gate-plan.md  2026-07-12-authority-split-design.md  guardrails-atp-mapping.md  ops-runbook.md
models/: agent_policy_tree.json
orchestrator/: arbiter_client.py  types.py
orchestrator/_vendor/: __init__.py  obs.py
orchestrator/tests/: test_arbiter_integration.py  test_e2e_smoke.py
scripts/: ab_bench_rerank.py  bootstrap_agent_tree.py  check_authority_conformance.py  check_routable_gate.py  eval_shadow.py  eval_tree.py  gen_agents_scaffold.py  ingest_benchmark_payloads.py
spec/: .executor-progress.txt  .executor-state.json  WORKFLOW.md  design.md  executor.config.yaml  executor.py  requirements.md  task.py  tasks.md
tests/: test_authority_conformance.py  test_bootstrap_tree.py  test_eval_shadow.py  test_gen_agents_scaffold.py  test_routable_gate.py  test_workspace.py
(+15 files in other folders)
