[project]
name = "arbiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "spec-runner>=0.1.1",
]

[tool.ruff]
exclude = [
    ".claude/",
    "spec/",
]
