[package]
name = "arbiter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Arbiter smoke tests and benchmarks"

[dependencies]
arbiter-core = { path = "../arbiter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
