[package]
name = "arbiter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared library for Arbiter: types, DT inference, invariants, metrics"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
