[package]
name = "arbiter-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP Server binary for Arbiter: stdio transport, JSON-RPC 2.0"

[dependencies]
arbiter-core = { path = "../arbiter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
signal-hook = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = "3"
